# gsplat2d-rendering

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: render_ply.py
src/gsplat2d_rendering/: __init__.py  _log.py  camera.py  compression.py  lod.py  model.py  sh.py
src/gsplat2d_rendering/culling/: __init__.py  cache.py  frustum.py  octree.py
src/gsplat2d_rendering/io/: __init__.py  chunked_ply.py  paths.py  ply.py
src/gsplat2d_rendering/math_utils/: __init__.py  rotations.py
src/gsplat2d_rendering/render/: __init__.py  candidate_filters.py  depth_normal.py  display_modes.py  extras.py  lod_blend.py  pipeline.py  profiling.py  rasterizer.py
src/gsplat2d_rendering/streaming/: __init__.py  adjacency.py  fine_octree.py  manager.py  rebuild.py  tiers.py  transitions.py
